test/errors/traits/invalid_instance_member/main.sk
module Main {

struct Foo {

}

protocol Bar[T] {
    fn bar(self) -> ()
}

impl BarImpl Bar[Foo] {
    fn bar(self) -> () {

    }

    fn baz() {

    }
}

fn main() {
}

}